Changes: - Added ability to find total pages for languages - Fixed bugs